--- a/Css/p1stylesheets.css
+++ b/Css/p1stylesheets.css
@@ -26,6 +26,7 @@ body
 }
 #main
 {
+	background-color: rgba(0, 0, 0, 0.7);
 	width:100%; 
 	float:left;
 	border-radius: 15pt;
@@ -37,34 +38,23 @@ body
 	font-size: 45pt;
 	font-style: bold;
 }
-#imagen1
+.columna1
 {
-	opacity: 0.9;
-}
-.column1
-{
-	background-color:rgba(0, 0, 0, 0.2); 
 	width:33%; 
 	float:left; 
-	border-radius: 15pt;
 }
-.column1:hover
+.columna2
 {
-	background-color:rgba(0, 0, 0, 0.8);
-}
-.column2
-{
-	background-color:rgba(0, 0, 0, 0.5); 
+	font-family: Ruthie; 
 	width:33%; 
 	float:left;
-	border-radius: 15pt;
 }
-.column3
+.columna3
 {
-	background-color:rgba(0, 0, 0, 0.5); 
+	font-family: Tangerine;
+	font-size: 40pt;
 	width:33%; 
 	float:left;
-	border-radius: 15pt;
 }
 #lema
 {
@@ -220,7 +210,7 @@ body
 	background-color:rgba(0, 255, 0, 0.4);
 	width: 50%;
 	float:left;
-	border-radius: 15pt;	
+	border-radius: 15pt;
 }
 .pie1:hover
 {
@@ -275,7 +265,7 @@ body
 	background-color:rgba(75, 0, 130, 0.4);
 	width: 50%;
 	float:right;
-	border-radius: 15pt;
+	border-radius: 15pt;	
 }
 .pie6:hover
 {
