--- a/Css/stylesheets.css
+++ b/Css/stylesheets.css
@@ -44,6 +44,13 @@ body
 	font-size: 45pt;
 	font-style: bold;
 }
+#titulo3
+{
+	color:red;
+	font-family: Covered By Your Grace;
+	font-size: 45pt;
+	font-style: bold;
+}
 #imagen1
 {
 	opacity: 0.9;
