More changes again

--- a/Css/p1stylesheets.css
+++ b/Css/p1stylesheets.css
@@ -17,7 +17,7 @@ body
 	background-repeat: no-repeat; 
 	background-position: center center;
 	background-blend-mode: hard-light;
-	background-color: #260832;
+	background-color: pink;
 	font-family: Agency FB;
 	text-align: center;
 	font-style: italic;
